# horus-gui

./: README.md  horus-gui.spec  horus-gui_osx.spec  horus-gui_osx_runner.spec  horus-gui_win.spec  pyproject.toml  requirements.txt
.github/workflows/: pull-request.yml
horusgui/: __init__.py  config.py  fft.py  gui.py  modem.py
